--- a/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj
+++ b/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj
@@ -144,7 +144,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>NotSet</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -153,12 +153,13 @@
       </HeapReserveSize>
       <HeapCommitSize>
       </HeapCommitSize>
-      <StackReserveSize>100000000</StackReserveSize>
-      <StackCommitSize>100000000</StackCommitSize>
+      <StackReserveSize>300000000</StackReserveSize>
+      <StackCommitSize>
+      </StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="OpenCV_ExtensionTool.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="OpenCV_Extension_Tool.cpp" />
   </ItemGroup>
   <ItemGroup>
