--- a/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj
+++ b/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj
@@ -164,10 +164,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MatchToolDlg.cpp" />
     <ClCompile Include="OpenCV_DEBUG_Tool.cpp" />
     <ClCompile Include="OpenCV_Extension_Tool.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MatchToolDlg.h" />
     <ClInclude Include="OpenCV_DEBUG_Tool.h" />
     <ClInclude Include="OpenCV_Extension_Tool.h" />
   </ItemGroup>
