--- a/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj.filters
+++ b/OpenCV_ExtensionTool/OpenCV_ExtensionTool.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="OpenCV_DEBUG_Tool.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="MatchToolDlg.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV_Extension_Tool.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="OpenCV_DEBUG_Tool.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="MatchToolDlg.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
